--- a/public/Contacts.html
+++ b/public/Contacts.html
@@ -26,19 +26,19 @@
       <h2>Продажа кофт и футболок отличного качества</h2>
       <nav class="navigation">
          <ul>
-            <li class="stroka_navigatsii"><a href="./index.html">Главная</a></li>
-            <li class="stroka_navigatsii"><a href="./index1.html">О нас</a></li>
-            <li class="stroka_navigatsii"><a href="./index2.html">Товары</a></li>
+            <li class="stroka_navigatsii"><a href="home.html">Главная</a></li>
+            <li class="stroka_navigatsii"><a href="about.html">О нас</a></li>
+            <li class="stroka_navigatsii"><a href="Products.html">Товары</a></li>
             <li class="stroka_navigatsii Home"><a href="#contact">Контакты</a></li>
-            <li class="stroka_navigatsii"><a href="index4.html">Отзывы</a></li>
-            <li class="stroka_navigatsii"><a href="./index5.html">Лист желанных товаров</a></li>
+            <li class="stroka_navigatsii"><a href="Reviews.html">Отзывы</a></li>
+            <li class="stroka_navigatsii"><a href="Wish_list.html">Лист желанных товаров</a></li>
          </ul>
       </nav>
       </header>
       <main>
+         <h3>Контакты и помощь</h3>
       </main>
       <footer>
-      <h3>Контакты и помощь</h3>
       <address id="contact">
          Телефон комании:<a href="tel:+79522263707">+7 (952) 226-37-07</a>
          <p>
