--- a/public/Products.html
+++ b/public/Products.html
@@ -26,12 +26,12 @@
       <h2>Продажа кофт и футболок отличного качества</h2>
       <nav class="navigation">
          <ul>
-            <li class="stroka_navigatsii"><a href="./index.html">Главная</a></li>
-            <li class="stroka_navigatsii"><a href="./index1.html">О нас</a></li>
+            <li class="stroka_navigatsii"><a href="home.html">Главная</a></li>
+            <li class="stroka_navigatsii"><a href="about.html">О нас</a></li>
             <li class="stroka_navigatsii Home"><a href="#products">Товары</a></li>
-            <li class="stroka_navigatsii"><a href="./index3.html">Контакты</a></li>
-            <li class="stroka_navigatsii"><a href="./index4.html">Отзывы</a></li>
-            <li class="stroka_navigatsii"><a href="./index5.html">Лист желанных товаров</a></li>
+            <li class="stroka_navigatsii"><a href="Contacts.html">Контакты</a></li>
+            <li class="stroka_navigatsii"><a href="Reviews.html">Отзывы</a></li>
+            <li class="stroka_navigatsii"><a href="Wish_list.html">Лист желанных товаров</a></li>
          </ul>
       </nav>
    </header>
@@ -55,14 +55,26 @@
                <p class="cost">Цена: <del>4000 руб.</del> <ins>3499 руб.</ins></p>
             </div>
             <div class="block">
-               <img src="image/Свитшот Череп.jpg" alt="Свитшот " Череп">
+               <img src="image/Свитшот Череп.jpg" alt="Свитшот Череп"/>
                <h3><em>Свитшот "Череп"</em></h3>
                <p class="cost">Цена: <del>4000 руб.</del> <ins>3499 руб.</ins></p>
             </div>
          </div>
       </section>
+   </main>
+   <footer>
+      <h3>Контакты и помощь</h3>
+      <address id="contact">
+         Телефон комании:<a href="tel:+79522263707">+7 (952) 226-37-07</a>
+         <p>
+            Почта компании:<a href="mailto:dmitriy_gerasimov_02@mail.ru">dmitriy_gerasimov_02@mail.ru</a>
+         </p>
+         <p>
+            Наша группа Вконтакте:<a href="https://vk.com/inorangeshop" target="_blank">Наша группа</a>
+         </p>
+      </address>
       <div id="loadTime"></div>
-      </footer>
+   </footer>
 </body>
 
 </html>
