--- a/public/Wish_list.html
+++ b/public/Wish_list.html
@@ -4,22 +4,15 @@
     <meta charset="utf-8" />
     <meta
       name="keywords"
-      content="Кофты, Купить кофты, кофты отличного качества, купить футболку"
-    />
+      content="Кофты, Купить кофты, кофты отличного качества, купить футболку" />
     <meta name="description" content="Распродажа различных видов мячей" />
     <title>Интернет магазин кофт и тишек</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet" />
     <link rel="shortcut icon" type="image/x-icon" href="image/imagemini.jpg" />
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -34,13 +27,13 @@
       <h2>Продажа кофт и футболок отличного качества</h2>
       <nav class="navigation">
         <ul>
-          <li class="stroka_navigatsii"><a href="./index.html">Главная</a></li>
-          <li class="stroka_navigatsii"><a href="./index1.html">О нас</a></li>
-          <li class="stroka_navigatsii"><a href="./index2.html">Товары</a></li>
+          <li class="stroka_navigatsii"><a href="home.html">Главная</a></li>
+          <li class="stroka_navigatsii"><a href="about.html">О нас</a></li>
+          <li class="stroka_navigatsii"><a href="Products.html">Товары</a></li>
           <li class="stroka_navigatsii">
-            <a href="./index3.html">Контакты</a>
+            <a href="Contacts.html">Контакты</a>
           </li>
-          <li class="stroka_navigatsii"><a href="./index4.html">Отзывы</a></li>
+          <li class="stroka_navigatsii"><a href="Reviews.html">Отзывы</a></li>
           <li class="stroka_navigatsii Home">
             <a href="#home">Лист желанных товаров</a>
           </li>
@@ -70,8 +63,17 @@
       <script src="Scripts/script_list.js"></script>
     </section>
     </main>
-    <footer>
-      <div id="loadTime"></div>
+    <h3>Контакты и помощь</h3>
+    <address id="contact">
+      Телефон комании:<a href="tel:+79522263707">+7 (952) 226-37-07</a>
+      <p>
+        Почта компании:<a href="mailto:dmitriy_gerasimov_02@mail.ru">dmitriy_gerasimov_02@mail.ru</a>
+      </p>
+      <p>
+        Наша группа Вконтакте:<a href="https://vk.com/inorangeshop" target="_blank">Наша группа</a>
+      </p>
+    </address>
+    <div id="loadTime"></div>
     </footer>
   </body>
 </html>
