--- a/public/home.html
+++ b/public/home.html
@@ -30,15 +30,12 @@
       <h2>Продажа кофт и футболок отличного качества</h2>
       <nav class="navigation">
          <ul>
-            <li class="stroka_navigatsii Home"><a href="#home">Главная</a></li>
-            <li class="stroka_navigatsii"><a href="./index1.html">О нас</a></li>
-            <li class="stroka_navigatsii"><a href="./index2.html">Товары</a></li>
-            <li class="stroka_navigatsii">
-               <a href="./index3.html">Контакты</a>
-            </li>
-            <li class="stroka_navigatsii"><a href="./index4.html">Отзывы</a></li>
-            <li class="stroka_navigatsii">
-               <a href="./index5.html">Лист желанных товаров</a>
+            <li class="stroka_navigatsii"><a href="./home.html">Главная</a></li>
+            <li class="stroka_navigatsii"><a href="./about.html">О нас</a></li>
+            <li class="stroka_navigatsii"><a href="./Products.html">Товары</a></li>
+            <li class="stroka_navigatsii"><a href="./Contacts.html">Контакты</a></li>
+            <li class="stroka_navigatsii"><a href="./Reviews.html">Отзывы</a></li>
+            <li class="stroka_navigatsii"><a href="./Wish_list.html">Лист желанных товаров</a>
             </li>
          </ul>
       </nav>
@@ -107,7 +104,7 @@
                   <td class="grid_table_td">Отличное качество и быстрая доставка! Муж рад.</td>
                   <td class="grid_table_td">Отличное качество и быстрая доставка! Жена рада.</td>
                   <td class="grid_table_td">Отличное качество и быстрая доставка! Жена рада.</td>
-                  </trlass=>
+                  </tr>
                <tr class="grid_table_tr">
                   <td class="grid_table_td">Отличное качество и быстрая доставка! Жена рада.</td>
                   <td class="grid_table_td">Отличное качество и быстрая доставка! Муж рад.</td>
